[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adem-env"
version = "0.1.0"
description = "Adaptive Disaster Evacuation Management OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "graders", "server", "tasks"]
py-modules = ["adem_env", "models"]
include-package-data = true

[tool.setuptools.package-dir]
env = "env"
graders = "graders"
server = "server"
tasks = "tasks"